# mx-master-remake

./: .gitignore  Cargo.toml  Memory.x  build.rs
.cargo/: config.toml
embassy-nrf/: Cargo.toml  README.md
embassy-nrf/src/usb/: mod.rs  vbus_detect.rs
src/: main.rs
