[package]
authors = ["Tyler Richard <trichard2@wisc.edu>"]
edition = "2021"
name = "mx-master-remake"
version = "0.1.0"

[dependencies]
embassy-executor = { version = "0.5.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.5.0" }
embassy-nrf = { path = "./embassy-nrf", features = [
  "defmt",
  "gpiote",
  "time-driver-rtc1",
  "nrf52840",
  "nfc-pins-as-gpio",
] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
nrf-softdevice = { version = "0.1.0", features = [
  "defmt",
  "ble-peripheral",
  "ble-central",
  "critical-section-impl",
  "s140",
  "nrf52840",
  "ble-l2cap",
  "ble-gatt-server",
  "ble-gatt-client",
  "ble-sec",
] }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
futures = { version = "0.3.29", default-features = false }
fixed = "1.24.0"
heapless = "0.8.0"
atomic-pool = "1.0.1"
static_cell = "2.0.0"
# embassy-boot-nrf = { version = "0.2.0", features = ["softdevice", "defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
